fix: Ajustar el tamaño de fuente a 9px en elementos de dimensiones y columnas para mejorar la legibilidad

--- a/static/src/scss/components/_product-details.scss
+++ b/static/src/scss/components/_product-details.scss
@@ -384,7 +384,7 @@
                     justify-content: flex-end;
                     
                     .dimensions-inline {
-                        font-size: 7px;
+                        font-size: 9px;
                         display: flex;
                         align-items: center;
                         gap: 3px;
@@ -423,7 +423,7 @@
 
                 &.col-bloque, &.col-atado, 
                 &.col-pedimento, &.col-contenedor {
-                    font-size: 10px;
+                    font-size: 9px;
                     color: #333;
                     flex-direction: row;
                     align-items: center;
